# bpmsampler4

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  PROJECT_OVERVIEW.md  build-linux.sh
.claude/: settings.local.json
.github/workflows/: build-mac.yml
Source/: CurveData.h  CurveEditorComponent.cpp  CurveEditorComponent.h  CurveKnob.cpp  CurveKnob.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  WaveformDisplay.cpp  WaveformDisplay.h
